(moved back to old resize icon); Fix: tried to make images a bit less blurry (again, not satisfied yet)

--- a/static/layout.css
+++ b/static/layout.css
@@ -5,7 +5,7 @@ Copyright (c) 2020-2021 Christian Glöckner
 License: MIT (see LICENSE for details)
 */
 
-img {
+img, canvas {
     image-rendering: pixelated;
 }
 
